# arya-agent

./: .gitignore  ADAPTIVE_RUNTIME.md  AI_INDEX.md  CHANGES.md  CLA.md  HERMES_CORE.md  NOTICE  README.md  RELEASING.md  ROADMAP_ARYA.md  settings.gradle.kts
.github/workflows/: build.yml  cla.yml  e4b-action-model.yml  emulator-matrix.yml  firebase-test-lab.yml  release.yml  review-room.yml
app/: build.gradle.kts
app/src/androidTest/java/io/agents/arya/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/benchmarks/: arya_bench_fa.json
app/src/main/assets/web/: debug.html  index.html
app/src/main/cpp/: CMakeLists.txt  bitnet_jni.cpp  bitnet_jni.cpp.bak
app/src/main/java/io/agents/arya/: AppCapabilityCoordinator.kt  AppViewModel.kt  ClawApplication.kt  TaskEvent.kt  TaskOrchestrator.kt  TaskSessionStore.kt
app/src/main/java/io/agents/arya/agent/: AgentCallback.kt  AgentConfig.kt  AgentService.kt  AgentServiceFactory.kt  AppCardRegistry.kt  AppFlowAdapter.kt  CloudProvider.kt  DefaultAgentService.kt  DeterministicPlan.kt  DirectDeviceDataGuard.kt  EmailComposeGuard.kt  FastTaskMatchers.kt  InAppSearchGuard.kt  LocalTaskBudget.kt  ModelPricing.kt  PersianCommandCompiler.kt  PersianNormalizer.kt  PipelineRouter.kt  PlanExecutor.kt  PlaybookManager.kt  PromptUtils.kt  RoutingPolicy.kt  ScreenDsl.kt  StuckDetector.kt  SystemOrchestrator.kt  (+9 more)
app/src/main/res/layout/: activity_channel_config.xml  activity_guide.xml  activity_llm_config.xml  activity_settings.xml  activity_theme.xml  activity_web.xml  dialog_alert.xml  dialog_confirm.xml  dialog_input.xml  dialog_qr_code.xml  layout_floating_circle.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  voice_interaction.xml
app/src/test/java/io/agents/arya/: ExampleUnitTest.kt
docs/: AI_AGENT_PLAYBOOK.md  ARCHITECTURE_DECISIONS.md  ARYA_REVIEW_SESSION_20260710.md  OEM_COVERAGE_TIERS.md  OEM_STABILITY_FA.md  community-issue-replies.md  demo.html  index.html  og-image.html  robots.txt  sitemap.xml  skill-spec.md
models/arya-e4b-action/: DELEGATION_PACKET_FA.md  HEAVY_DELEGATION_BRIEF_FA.md  README.md  action_ir.schema.json  training_recipe.md
models/arya-e4b-action/colab/: README.md  arya_e4b_action_adapter.ipynb
models/arya-e4b-action/dataset/: README.md  seed.fa-en.jsonl
models/arya-e4b-action/dataset/heldout/: arya_action_eval_v2_300_unique.jsonl
models/arya-e4b-action/dataset/reviewed/: DATASET_REPAIR_REPORT_ORIGINAL.md  README.md  arya_action_train_v2_1000_unique.jsonl
review-room/: app.py  live-room.json
scripts/: e2e-quick-tasks.sh  emulator-smoke.sh  generate_arya_e4b_bootstrap_corpus.py  normalize_arya_action_clarifications.py  validate_arya_e4b_action_dataset.py
(+217 files in other folders)
